--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,8 @@ textarea{
   color: #000000;
   border-top: 1px dashed #000000;
   width: 10%;
+  padding-top: 10px;
+  padding-left: 70px;
 }
 
 .past {
@@ -66,9 +68,12 @@ textarea{
   background-color: #06AED5;
   color: white;
   width: 8%;
+  padding: 30px;
+  padding-left: 35px;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
